--- a/index.html
+++ b/index.html
@@ -1,50 +1,68 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Rtorrent by rakshasa</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Rtorrent : rTorrent BitTorrent client" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Rtorrent</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Rtorrent</h1>
-        <p>rTorrent BitTorrent client</p>
 
-        <p class="view"><a href="https://github.com/rakshasa/rtorrent">View the Project on GitHub <small>rakshasa/rtorrent</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/rakshasa/rtorrent">View on GitHub</a>
 
+          <h1 id="project_title">Rtorrent</h1>
+          <h2 id="project_tagline">rTorrent BitTorrent client</h2>
 
-        <ul>
-          <li><a href="https://github.com/rakshasa/rtorrent/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/rakshasa/rtorrent/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/rakshasa/rtorrent">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/rakshasa/rtorrent/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/rakshasa/rtorrent/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="rtorrent-and-libtorrent-wiki" class="anchor" href="#rtorrent-and-libtorrent-wiki"><span class="octicon octicon-link"></span></a>RTorrent and LibTorrent Wiki</h1>
 
 <h2>
+<a name="wiki" class="anchor" href="#wiki"><span class="octicon octicon-link"></span></a>Wiki</h2>
+
+<ul>
+<li><a href="https://github.com/rakshasa/rtorrent/wiki">https://github.com/rakshasa/rtorrent/wiki</a></li>
+</ul><h2>
 <a name="download" class="anchor" href="#download"><span class="octicon octicon-link"></span></a>Download</h2>
 
 <ul>
 <li><a href="http://libtorrent.rakshasa.no/downloads/libtorrent-0.13.4.tar.gz">http://libtorrent.rakshasa.no/downloads/libtorrent-0.13.4.tar.gz</a></li>
 <li><a href="http://libtorrent.rakshasa.no/downloads/rtorrent-0.9.4.tar.gz">http://libtorrent.rakshasa.no/downloads/rtorrent-0.9.4.tar.gz</a></li>
+</ul><h2>
+<a name="mailing-list" class="anchor" href="#mailing-list"><span class="octicon octicon-link"></span></a>Mailing List</h2>
+
+<ul>
+<li><a href="http://rakshasa.no/mailman/listinfo">http://rakshasa.no/mailman/listinfo</a></li>
 </ul>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/rakshasa">rakshasa</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Rtorrent maintained by <a href="https://github.com/rakshasa">rakshasa</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
