Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Rtorrent by rakshasa</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -29,24 +29,21 @@
       </header>
       <section>
         <h1>
-<a name="rtorrent-and-libtorrent-wiki" class="anchor" href="#rtorrent-and-libtorrent-wiki"><span class="octicon octicon-link"></span></a>RTorrent and LibTorrent Wiki</h1>
+<a id="rtorrent-and-libtorrent-wiki" class="anchor" href="#rtorrent-and-libtorrent-wiki" aria-hidden="true"><span class="octicon octicon-link"></span></a>RTorrent and LibTorrent Wiki</h1>
 
 <h2>
-<a name="wiki" class="anchor" href="#wiki"><span class="octicon octicon-link"></span></a>Wiki</h2>
+<a id="wiki" class="anchor" href="#wiki" aria-hidden="true"><span class="octicon octicon-link"></span></a>Wiki</h2>
 
 <ul>
 <li><a href="https://github.com/rakshasa/rtorrent/wiki">https://github.com/rakshasa/rtorrent/wiki</a></li>
-</ul><h2>
-<a name="download" class="anchor" href="#download"><span class="octicon octicon-link"></span></a>Download</h2>
+</ul>
+
+<h2>
+<a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
 
 <ul>
-<li><a href="http://libtorrent.rakshasa.no/downloads/libtorrent-0.13.4.tar.gz">http://libtorrent.rakshasa.no/downloads/libtorrent-0.13.4.tar.gz</a></li>
-<li><a href="http://libtorrent.rakshasa.no/downloads/rtorrent-0.9.4.tar.gz">http://libtorrent.rakshasa.no/downloads/rtorrent-0.9.4.tar.gz</a></li>
-</ul><h2>
-<a name="mailing-list" class="anchor" href="#mailing-list"><span class="octicon octicon-link"></span></a>Mailing List</h2>
-
-<ul>
-<li><a href="http://rakshasa.no/mailman/listinfo">http://rakshasa.no/mailman/listinfo</a></li>
+<li><a href="http://rtorrent.net/downloads/libtorrent-0.13.6.tar.gz">http://rtorrent.net/downloads/libtorrent-0.13.6.tar.gz</a></li>
+<li><a href="http://rtorrent.net/downloads/rtorrent-0.9.6.tar.gz">http://rtorrent.net/downloads/rtorrent-0.9.6.tar.gz</a></li>
 </ul>
       </section>
       <footer>
