--- a/index.html
+++ b/index.html
@@ -39,12 +39,21 @@
 </ul>
 
 <h2>
-<a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
+<a id="stable" class="anchor" href="#stable" aria-hidden="true"><span class="octicon octicon-link"></span></a>Stable</h2>
 
 <ul>
 <li><a href="http://rtorrent.net/downloads/libtorrent-0.13.6.tar.gz">http://rtorrent.net/downloads/libtorrent-0.13.6.tar.gz</a></li>
 <li><a href="http://rtorrent.net/downloads/rtorrent-0.9.6.tar.gz">http://rtorrent.net/downloads/rtorrent-0.9.6.tar.gz</a></li>
 </ul>
+        
+<h2>
+<a id="unstable" class="anchor" href="#unstable" aria-hidden="true"><span class="octicon octicon-link"></span></a>Unstable</h2>
+
+<ul>
+<li><a href="http://rtorrent.net/downloads/libtorrent-0.13.7.tar.gz">http://rtorrent.net/downloads/libtorrent-0.13.7.tar.gz</a></li>
+<li><a href="http://rtorrent.net/downloads/rtorrent-0.9.7.tar.gz">http://rtorrent.net/downloads/rtorrent-0.9.7.tar.gz</a></li>
+</ul>
+        
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/rakshasa">rakshasa</a></p>
